--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div>
 			</div>
 		</div>
+        <div id="credit">By: <a href="http://anmolmago.com">Anmol Mago</a></div>
 	</body>
 </html>
 <script type="text/javascript" src="my.js" defer></script>
