--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div><div class="repo"></div>
 			</div>
 		</div>
-        <div class="extra" id="credit">By: <a href="http://anmolmago.com">Anmol Mago</a></div>
+        <div class="extra" id="credit">By: <a href="http://anmolmago.com/external/GithubTrending">Anmol Mago</a></div>
         <div class="extra" id="loading">Loading...</div>
         <div class="extra" id="forceRefresh">Force Refresh!</div>
 	</body>
