--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<h2><img src="logo.png"/> Trending</h2>
-			
+			<h2><img src="./assets/images/logo.png"/> Trending</h2>
+
 			<div class="selection" id="languages">
 				<p>Languages:&nbsp;</p>
 				<select id="langSelect"></select>
